--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div class="sobre">
         
         <div>
-            <img src="./IMG/Bolinha2.png"> 
+            <img src="./IMG/Sobre.png"> 
         </div>
 
         <div class="tamanho2">
@@ -219,7 +219,7 @@
                         <li><img class="img1" src="./IMG/Facebook.png" alt="face"></li>
                         <li><img class="img1" src="./IMG/Instagram.png" alt="ista"></li>
                         <li><img class="img1" src="./IMG/Twitter.png" alt="twit"></li>
-                        <li><img class="img1" src="./IMG/Play Story.png" alt="play"></li>
+                        <li><img class="img1" src="./IMG/PlayStory.png" alt="play"></li>
 
                     </ul>
                     
