--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div class="sobre">
         
         <div>
-            <img src="./IMG/Sobre.png"> 
+            <img src="./IMG/Sobre"> 
         </div>
 
         <div class="tamanho2">
