--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <li><img class="img1" src="./IMG/Facebook.png" alt="face"></li>
                         <li><img class="img1" src="./IMG/Instagram.png" alt="ista"></li>
                         <li><img class="img1" src="./IMG/Twitter.png" alt="twit"></li>
-                        <li><img class="img1" src="./IMG/WhatsApp" alt="whats"></li>
+                        <li><img class="img1" src="./IMG/WhatsApp.png" alt="whats"></li>
 
                     </ul>
                     
